8300658: memory_and_swap_limit() reporting wrong values on systems with swapaccount=0