src/hotspot/os/linux/cgroupV1Subsystem_linux.cpp
@@ -88,6 +88,20 @@ void CgroupV1MemoryController::set_subsystem_path(char *cgroup_path) {
   }
 }
 
+/* read_mem_swap
+ *
+ * Returns the memory and swap metric
+ *
+ * return:
+ *    A number > 0 if available,
+ *    OSCONTAINER_ERROR for not supported
+ */
+jlong CgroupV1Subsystem::read_mem_swap() {
+  GET_CONTAINER_INFO(jlong, _memory->controller(), "/memory.memsw.limit_in_bytes",
+                     "Memory and Swap Limit is: " JLONG_FORMAT, JLONG_FORMAT, memswlimit);
+  return memswlimit;
+}
+
 jlong CgroupV1Subsystem::read_memory_limit_in_bytes() {
   GET_CONTAINER_INFO(julong, _memory->controller(), "/memory.limit_in_bytes",
                      "Memory Limit is: " JULONG_FORMAT, JULONG_FORMAT, memlimit);
@@ -112,9 +126,13 @@ jlong CgroupV1Subsystem::read_memory_limit_in_bytes() {
 }
 
 jlong CgroupV1Subsystem::memory_and_swap_limit_in_bytes() {
+  jlong swap_limit = read_mem_swap();
+  if (swap_limit < 0) {
+    // swap disabled on kernel level. Treat it as no swap.
+    return read_memory_limit_in_bytes();
+  }
+  julong memswlimit = (julong)swap_limit;
   julong host_total_memsw;
-  GET_CONTAINER_INFO(julong, _memory->controller(), "/memory.memsw.limit_in_bytes",
-                     "Memory and Swap Limit is: " JULONG_FORMAT, JULONG_FORMAT, memswlimit);
   host_total_memsw = os::Linux::host_swap() + os::Linux::physical_memory();
   if (memswlimit >= host_total_memsw) {
     log_trace(os, container)("Non-Hierarchical Memory and Swap Limit is: Unlimited");
